terraform/gcp/dns-test.tf
## to setup a web-server
#
#resource "random_id" "rnd" {
#  byte_length = 4
#}
#
#resource "google_compute_instance" "default" {
#  name         = "dns-compute-instance"
#  machine_type = var.machine_type
#  zone         = var.zone
#
#  boot_disk {
#    initialize_params {
#      image = var.ubuntu-minimal-2204-lts
#    }
#  }
#
#  network_interface {
#    network = "default"
#    access_config {
#      // Ephemeral public IP
#    }
#  }
#  metadata_startup_script = <<-EOF
#  sudo apt-get update && \
#  sudo apt-get install apache2 -y && \
#  echo "<!doctype html><html><body><h1>Hello World!</h1></body></html>" > /var/www/html/index.html
#  EOF
#}
#
## to allow http traffic
#resource "google_compute_firewall" "default" {
#  name    = "allow-http-traffic"
#  network = "default"
#  allow {
#    ports    = ["80"]
#    protocol = "tcp"
#  }
#  source_ranges = ["0.0.0.0/0"]
#}
#
## to create a DNS zone
#resource "google_dns_managed_zone" "default" {
#  name          = "example-zone-googlecloudexample"
#  dns_name      = "example-${random_id.rnd.hex}.com."
#  description   = "Example DNS zone"
#  force_destroy = "true"
#}
#
## to register web-server's ip address in DNS
#resource "google_dns_record_set" "default" {
#  name         = google_dns_managed_zone.default.dns_name
#  managed_zone = google_dns_managed_zone.default.name
#  type         = "A"
#  ttl          = 300
#  rrdatas = [
#    google_compute_instance.default.network_interface[0].access_config[0].nat_ip
#  ]
#}
